@@ -374,6 +374,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Framework\SessionScopeWebModule.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Framework\SupportingUtils.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
